# chimera-fli

./: .cruft.json  README.md  README.rst  pyproject.toml  setup.py
chimera_fli/instruments/: fli.py
docs/: summary.md
src/chimera/instruments/: fli.py
src/chimera/instruments/fli/: __init__.py  fli.py
src/chimera_fli/fli/: __init__.py  camera.py  device.py  filter_wheel.py  focuser.py  lib.py
src/chimera_fli/instruments/: fli.py  flicamera.py  flifilterwheel.py
tests/: __init__.py
tests/chimera_fli/: test_flifilterwheel.py
