[project]
name = "chimera_fli"
version = "0.1.0"
description = "Chimera plugin for Finger Lakes Instrumentation CCD cameras and filter wheels"
license = "GPL-2.0-or-later"
authors = [
    { name = "William Schoenell", email = "wschoenell@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chimera",
    "numpy>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chimera_fli"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["N", "I", "UP", "F"]

[tool.ruff.lint.per-file-ignores]
# vendored python-FLI bindings keep their upstream style
"src/chimera_fli/fli/*" = ["N", "UP", "E741"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"

[tool.uv.sources]
chimera = { git = "https://github.com/astroufsc/chimera.git" }
